@@ -44,6 +44,12 @@ public class UnknownCharacter extends AbstractCharacter implements SimpleCharact
         if (!UnknownCharacter.class.isAssignableFrom(o.getClass())) {
             return -1;
         }
-        return new Integer( getValue()).compareTo(((UnknownCharacter)o).getValue());
+        return Integer.valueOf(getValue()).compareTo(((UnknownCharacter) o).getValue());
+    }
+
+
+    @Override
+    public int getCodePointsCount() {
+        return 1;
     }
 }
