@@ -304,7 +304,7 @@ public abstract class TamilCharacter extends AbstractCharacter {
         if (!TamilCharacter.class.isAssignableFrom(o.getClass())) {
             return -1;
         }
-        return new Integer(getNumericStrength()).compareTo(((TamilCharacter) o).getNumericStrength());
+        return Integer.valueOf(getNumericStrength()).compareTo(((TamilCharacter) o).getNumericStrength());
     }
 
 
@@ -324,7 +324,7 @@ public abstract class TamilCharacter extends AbstractCharacter {
 
             if (ch.isUyirezhuththu()) {
                 if (isUyirezhuththu() || isUyirMeyyezhuththu()) {
-                    return ch.getUyirPart().getValue() <= getUyirPart().getValue();
+                    return ch.getUyirPart().getValue() == getUyirPart().getValue();
                 } else {
                     return false;
                 }
@@ -340,7 +340,7 @@ public abstract class TamilCharacter extends AbstractCharacter {
 
             if (ch.isUyirMeyyezhuththu()) {
                 if (isUyirMeyyezhuththu()) {
-                    return ch.getMeiPart().getConsonant() == getMeiPart().getConsonant() && ch.getUyirPart().getValue() <= getUyirPart().getValue();
+                    return ch.getMeiPart().getConsonant() == getMeiPart().getConsonant() && ch.getUyirPart().getValue() == getUyirPart().getValue();
                 } else {
                     return false;
                 }
@@ -429,6 +429,8 @@ public abstract class TamilCharacter extends AbstractCharacter {
         }
         return vallinam;
     }
+
+
 
 
 }
